--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                         <div id="content-3" class="custom-scrollbar-js p-2">
                             <h2>Mongoose.JS</h2>
                             <h4>An elegant mongodb object modeling for node.js</h4>
-                            <h5>Defining your schema</h5>
                             <p>Everything in Mongoose starts with a Schema. Each schema maps to a MongoDB collection and
                                 defines the
                                 shape of the documents within that collection.</p>
@@ -148,22 +147,23 @@
                         <div id="content-4" class="custom-scrollbar-js p-2">
                             <h2>Express.Js</h2>
                             <h4>Fast, unopinionated, minimalist web framework for Node.js</h4>
-                            <h5>Web Applications</h5>
+                            <br>
+                            <h5>Web Applications:</h5>
                             <p>Express is a minimal and flexible Node.js web application framework that provides a
                                 robust set of features for web and mobile applications.</p>
-                            <h5>APIs</h5>
+                            <h5>APIs:</h5>
                             <p>With a myriad of HTTP utility methods and middleware at your disposal, creating a robust
                                 API is quick and easy.</p>
-                            <h5>Performance</h5>
+                            <h5>Performance:</h5>
                             <p>Express provides a thin layer of fundamental web application features, without obscuring
                                 Node.js features that you know and love.</p>
-                            <h5>Basic Routing</h5>
+                            <h5>Basic Routing:</h5>
                             <p>Routing refers to determining how an application responds to a client request to a
                                 particular endpoint, which is a URI (or path) and a specific HTTP request method (GET,
                                 POST, and so on).
                                 Each route can have one or more handler functions, which are executed when the route is
                                 matched.</p>
-                            <h5>Route Paths</h5>
+                            <h5>Route Paths:</h5>
                             <p>Route paths, in combination with a request method, define the endpoints at which requests
                                 can be made. Route paths can be strings, string patterns, or regular expressions.
 
