--- a/index.html
+++ b/index.html
@@ -73,16 +73,20 @@
                                 <p>Node.js is similar in design to, and influenced by, systems like Ruby's Event Machine
                                     and Python's Twisted. Node.js takes the event model a bit further. It presents an
                                     event loop as a runtime construct instead of as a library. In other systems, there
-                                    is always a blocking call to start the event-loop. Typically, behavior is defined
+                                    is always a blocking call to start the event-loop. 
+                                    <br> <br>
+                                    Typically, behavior is defined
                                     through callbacks at the beginning of a script, and at the end a server is started
                                     through a blocking call like EventMachine::run(). In Node.js, there is no such
                                     start-the-event-loop call. Node.js simply enters the event loop after executing the
                                     input script. Node.js exits the event loop when there are no more callbacks to
                                     perform. This behavior is like browser JavaScript — the event loop is hidden from
                                     the user.
+                                    <br> <br>
                                     HTTP is a first-class citizen in Node.js, designed with streaming and low latency in
                                     mind. This makes Node.js well suited for the foundation of a web library or
                                     framework.
+                                    <br> <br>
                                     Node.js being designed without threads doesn't mean you can't take advantage of
                                     multiple cores in your environment. Child processes can be spawned by using our
                                     child_process.fork() API, and are designed to be easy to communicate with. Built
@@ -100,7 +104,7 @@
                             <p>Everything in Mongoose starts with a Schema. Each schema maps to a MongoDB collection and
                                 defines the
                                 shape of the documents within that collection.</p>
-                            <code> import mongoose from 'mongoose';
+                            <!-- <code> import mongoose from 'mongoose';
                                 const { Schema } = mongoose;
 
                                 const blogSchema = new Schema({
@@ -114,7 +118,7 @@
                                 votes: Number,
                                 favs: Number
                                 }
-                                });</code>
+                                });</code> -->
                             <p>Each key in our code blogSchema defines a property in our documents which will be cast to
                                 its associated
                                 SchemaType. For example, we've defined a property title which will be cast to the String
